# exercises-solutions

./: README.md
.github/workflows/: rust.yml
exercise_1_variables/src/: main.rs
exercise_1_variables_sol/src/: main.rs
exercise_2_primitive_types/src/: main.rs
exercise_2_primitive_types_sol/src/: main.rs
exercise_3_functions/src/: main.rs
exercise_3_functions_sol/src/: b_sumvec.rs  main.rs  part_1_add_numbers.rs  part_2_sumvec.rs  part_3_divide.rs
exercise_3_strings_sol/src/: main.rs
exercise_4_functions/src/: b_sumvec.rs
exercise_4_functions_sol/src/: main.rs  part_2_sumvec.rs  part_3_divide.rs  part_4_calculate.rs
exercise_4_strings/src/: main.rs
exercise_4_strings_sol/src/: main.rs
exercise_5_can_it_go_smaller/: Cargo.toml
exercise_5_can_it_go_smaller_sol/: Cargo.toml
exercise_5_can_it_go_smaller_sol/src/: main.rs
exercise_5_can_it_go_smallest_sol/: Cargo.toml
exercise_5_can_it_go_smallest_sol/src/: main.rs
exercise_6_library_sol/src/: main.rs
tcpcommclient/: Cargo.toml
tcpcommclient/src/: main.rs
tcpcommclient/src/net/: client.rs  json_client.rs
tcpcommserver/: Cargo.toml
tcpcommserver/src/: main.rs
