[package]
name = "exercise_5_can_it_go_smaller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Add flags to release profile for a minimal size build
# Tip: Can you optimize for size? Have Link Time Optimization? Remove debug information?
[profile.release]