#
# Welcome to the ALTEN rust playground. This exercise tries to create a minimal size binary for a hello world program in Rust
#
# To run this exercise you can run `cargo build` in this directory.
#
# Steps:
# Can you build a release version of this binary?
# Find flags to reduce the release binary in size. Add them to profile.release
#
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html

[package]
name = "exercise_5_can_it_go_smaller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Add flags to release profile for a minimal size build
# Tip: Can you optimize for size? Have Link Time Optimization? Remove debug information?
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.